scss/modules.scss
// Modules in this context refer to any unit of style that can be found across multiple pages. Most of your styles should be found here. This draws from the OOCSS idea of separating everything into reusable chunks, making it second-nature if you're familiar with that method.

// Examples of Modules
// Here are some commonly occurring examples of modules:

// Modals
// Buttons
// Tooltips
// Navigation
// Re-appearing chunks of content, like a user info card or sidebar

.centered-block {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    max-width: $content-width;
}

.hero {
    @include grid-row();
    h1 {
        font-size: 5rem;
        font-weight: 200;
        letter-spacing: -0.2;
        line-height: 1.25;
        padding: 6rem 4rem 7rem;
        // background: black;
        // color: white;
        border: .2rem solid $main-color;
        border-left: 0;
        border-right: 0;
    }
    .will-we {
        padding: 4rem;
        padding-bottom: 0;
        @include grid-row();
        .get-along, .not-get-along {
            @extend .medium-6;
            @extend .columns;
        }
    }
}

.header {
    @extend .row;
    h2 {
        padding: 4rem 4rem 2rem;
    }
}

.dropshadow-example {
    font-weight: 400;
    line-height: 1.2;
    padding: 40px !important;
    border: 1px solid #dddddd;
    text-shadow: 10px 10px 10px #999;
    // border-radius: 20px;
}

.grid-row-test {
    @include grid-row();
    .section {
        // @include grid-column(6);
        @extend .medium-6;
        @extend .columns;
    }
}

.device {
    background-repeat: no-repeat;
    background-size: 100%;
    // background-width: $height/2;
    display: inline-block;
    position: relative;
}

.iphone-5-vertical {
    @extend .device;
    
    @media #{$small-only} {
        $size: 20px;
        $vertical-bezel-size: 40px;

        border: 8px solid $off-white;
        border-top-width: $vertical-bezel-size;
        border-bottom-width: $vertical-bezel-size;
        border-radius: 12px;
        z-index: 100;

        &:before {
            $width: 40px;
            z-index: 200;
            content: "";
            display: block;
            position: absolute;
            width: $width;
            height: 6px;
            margin-left: -$width/2;
            top: -22px;
            left: 50%;
            border-radius: 999px;
            border: 1px solid $light-gray;
        }

        &:after {
            content: "";
            display: block;
            position: absolute;
            width: $size;
            height: $size;
            margin-left: -$size/2;
            bottom: -10px - $size;
            left: 50%;
            border-radius: 999px;
            border: 1px solid $light-gray;
        }
        img {
            position: relative;
            width: 200px;
            outline: 1px solid $main-color;
        }
    }
    @media #{$medium-up} {
        $scale: 0.8;
        $width: 758px * $scale;
        $height: 1605px * $scale;
        $top: 234px * $scale;
        $left: 62px * $scale;
        $screen-width: 640px * $scale;
        background-image: url(../img/iphone-5-black-vertical.png);
        width: $width/2;
        height: $height/2;
        img {
            width: $screen-width/2;
            top: $top/2;
            left: $left/2;
            display: block;
            position: absolute;
        }
    }
}

.ipad-horizontal {
    @extend .device;

    @media #{$small-only} {
        $size: 10px;
        $vertical-bezel-size: 24px;

        border: 14px solid $off-white;
        border-left-width: $vertical-bezel-size;
        border-right-width: $vertical-bezel-size;
        border-radius: 8px;
        z-index: 100;

        &:before {
            $width: 5px;
            z-index: 200;
            content: "";
            display: block;
            position: absolute;
            width: $width;
            height: $width;
            margin-top: -$width/2;
            left: -14px;
            top: 50%;
            border-radius: 999px;
            border: 1px solid $secondary-color;
        }

        &:after {
            content: "";
            display: block;
            position: absolute;
            width: $size;
            height: $size;
            margin-top: -$size/2;
            right: -7px - $size;
            top: 50%;
            border-radius: 999px;
            border: 1px solid $secondary-color;
        }
        img {
            position: relative;
            width: 300px;
            outline: 1px solid $main-color;
        }
    }

    @media #{$medium-up} {
        $scale: 0.6;
        $width: 2503px * $scale;
        $height: 1766px * $scale;
        $top: 115px * $scale;
        $left: 227px * $scale;
        $screen-width: 2048px * $scale;
        background-image: url(../img/ipad-black-horizontal.png);
        width: $width/2;
        height: $height/2;

        img {
            top: $top/2;
            left: $left/2;
            width: $screen-width/2;
            // height: 640px;
            display: block;
            position: absolute;
        }
    }
}

.browser-screenshot {
    display: block;
    margin-top: -35px;
    margin-left: -57px;
    margin-bottom: -79px;
}

.project {
    @include grid-row();
    // @extend .centered-block;
    // @extend .row;
    // max-width: 800px;
    border-top: 0.2rem solid black;
    margin-top: 6rem;
    padding: 0 4rem;

    & > .description {
        max-width: $content-width;
    }

    & > h1 {
        // text-align: center;
        font-size: 100%;
        letter-spacing: 0;
        small {
            letter-spacing: -0.06rem;
            line-height: 1.4;
            color: $main-color;
            background: $off-white;
            max-width: 700px;
            font-size: 3rem;
            font-weight: 200;
            padding: 2rem;
            margin-top: 1.5rem;
            // border: 0.15rem solid;
            // font-style: italic;
            // text-align: center;
        }
    }

    @media #{$small-only} {
        & > .description, & > h1 {
            @include grid-row();
            padding: 1rem;
        }
    }

    @media #{$medium-up} {
        & > h1 {
            margin: 4rem 0 0 0;
        }
        & > .description {
            margin: 2rem 0;
        }
    }

    .logo {
        width: 2rem;
        height: 2rem;
        margin-right: 1rem;
    }

    .product-shot {
        @include grid-row();
        padding: 2rem 0;
        @media #{$medium-up} {
            padding: 3rem 0rem;
        }
        border-top: 1px solid $light-gray;
        .iphone-5-vertical {
            // @extend .medium-6;
            // @extend .columns;
        }
        .description {
            @extend .medium-6;
            @extend .columns;
            max-width: $content-width;
        }
        @media #{$medium-up} {
            .description {
                margin-top: 85px;
            }
        }
        @media #{$small-only} {
            // &:nth-child(odd) {
            //     background: $off-white;
            // }
            img {

            }
            .description {
                margin-top: 2rem;
            }
        }
    }

    .product-shot p {
        // float: left;
    }
}

#content-body .sticky-contact.button {
    top: 1rem;
    right: 1rem;
    position: fixed;
    z-index: 1000;
}

.about-section {

}

footer.footer {
    @include grid-row();
    // background: black;
    color: white;
    padding: 1rem 4rem;
    margin-top: 4rem;
    .contact.button {
        width: 100%;
        padding: 2rem 0;
        font-size: 4rem;
        font-weight: 200 !important;
        // color: black;
        // background: white;
    }
}

